--- a/css/blocks/block-two.scss
+++ b/css/blocks/block-two.scss
@@ -22,8 +22,12 @@
 }
 
 .content__list {
-   display: inline-flex;
-   justify-content: flex-start;
+   display: flex;
+   flex-direction: row;
+
+   @include phone {
+      flex-direction: column;
+   }
 }
 
 .content__list-section {
