--- a/css/layout/main.scss
+++ b/css/layout/main.scss
@@ -3,10 +3,10 @@
 @import './layout.scss';
 @import './normalize.scss';
 
+@import './../blocks/block-two.scss';
 @import './../blocks/header.scss';
 @import './../blocks/sidebar.scss';
 @import './../blocks/block-one.scss';
-@import './../blocks/block-two.scss';
 @import './../blocks/burgers.scss';
 @import './../blocks/team.scss';
 @import './../blocks/menu.scss';
@@ -16,6 +16,7 @@
 @import './../blocks/contacts.scss';
 @import './../blocks/fixed-menu.scss';
 @import './../blocks/hamburger-menu.scss';
+@import './../blocks/hover-menu.scss';
 
 
 @font-face {
