--- a/css/blocks/block-two.scss
+++ b/css/blocks/block-two.scss
@@ -19,6 +19,12 @@
    text-transform: uppercase;
    color: #2f3234;
    margin-bottom: 3.44rem;
+
+   @include phone {
+      font-size: 3.5rem;
+      margin-bottom: 2rem;
+
+   }
 }
 
 .content__list {
@@ -38,31 +44,53 @@
    align-items: center;
    margin-right: 2.12rem;
    margin-bottom: 2.19rem;
+
+   @include phone {
+      flex-direction: row;
+      width: 100%;
+      justify-content: flex-end;
+      margin-right: 0rem;
+      margin-bottom: .9rem;
+
+   }
 }
 
 .list-section__meat {
-   padding-bottom: .94rem;
-   width: 6.06rem;
-   height: 5.56rem;
    fill: #e25028;
 }
 
 .list-section__hand {
-   padding-bottom: .94rem;
-   width: 4.56rem;
-   height: 5.31rem;
    fill: #f8b43a;
 }
 
 .list-section__natural {
+
+   fill: #8ac03e;
+}
+
+
+.list-section__natural,
+.list-section__hand,
+.list-section__meat {
+
    padding-bottom: .94rem;
    width: 5.5rem;
    height: 4.69rem;
-   fill: #8ac03e;
+
+   @include phone {
+      width: 5.5rem;
+      height: 4.69rem;
+
+   }
 }
 
 .content__list-section:last-child {
    margin-right: 0;
+}
+
+.content__text {
+   width: 80%;
+   margin-left: rem(20px);
 }
 
 .content__text h1 {
@@ -72,6 +100,11 @@
    font-weight: 500;
    line-height: 1.76rem;
    text-align: center;
+
+   @include phone {
+      font-size: 1.2rem;
+      text-align: left;
+   }
 }
 
 .content__text p {
@@ -81,4 +114,11 @@
    font-size: .88rem;
    font-weight: 300;
    line-height: 1.5rem;
+   text-align: center;
+
+   @include phone {
+      font-size: .8rem;
+      line-height: 1rem;
+      text-align: left;
+   }
 }
