--- a/css/blocks/hamburger-menu.scss
+++ b/css/blocks/hamburger-menu.scss
@@ -1,4 +1,3 @@
-
 .hamburger-menu__list {
    display: none;
    flex-direction: column;
@@ -8,6 +7,10 @@
 
    @include tablets {
       display: flex;
+   }
+
+   @include phone {
+      margin-right: rem(10px);
    }
 }
 
