--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -1,18 +1,22 @@
 .header {
-    display: inline-flex;
-    width: 100%;
-    padding: .75rem 0 rem(40px) 0;
- }
- 
- .header__logo {
+   display: inline-flex;
+   width: 100%;
+   padding: .75rem 0 rem(40px) 0;
+   
+   @include phone{
+      padding: .75rem 0 0 0;
+   }
+}
+
+.header__logo {
    width: 5.75rem;
    height: 4.31rem;
    flex: 1;
- }
- 
- .nav {
-    flex: 6;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
- }
+}
+
+.nav {
+   flex: 6;
+   display: flex;
+   align-items: center;
+   justify-content: flex-end;
+}
