--- a/css/blocks/hover-menu.scss
+++ b/css/blocks/hover-menu.scss
@@ -1,6 +1,6 @@
 .hover-menu {
    position: absolute;
-   height: 90vh;
+   height: 85vh;
    width: 100%;
    background-color: #333537;
    opacity: .95;
@@ -10,8 +10,14 @@
 .hover-menu__header {
    display: inline-flex;
    justify-content: space-between;
+   align-items: center;
    width: 100%;
    padding: .75rem 0 rem(40px) 0;
+
+   @include phone {
+      padding: .75rem 0 rem(0px) 0;
+
+   }
 }
 
 .hover-menu__content {
@@ -52,6 +58,14 @@
    font-family: ubuntu-regular;
    line-height: 3rem;
    font-size: rem(17px);
+
+   @include tablets {
+      font-size: rem(20px);
+   }
+}
+
+.cross {
+   margin-right: rem(20px);
 }
 
 .cross__list {
@@ -69,7 +83,8 @@
    transform: rotate(135deg);
 }
 
-.cross__list-one, .cross__list-two {
+.cross__list-one,
+.cross__list-two {
    position: absolute;
    height: 20%;
    width: 100%;
