--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -9,6 +9,9 @@
 }
 
 .team__block-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #313436;
     opacity: .95;
     position: absolute;
@@ -16,24 +19,28 @@
     right: 0;
     bottom: 0;
     left: 50%;
-    width: 100%;
+    width: 50%;
     height: 100vh;
 
     @include tablets {
-        display: flex;
         justify-content: center;
+        width: 100%;
+
         left: 0;
     }
 }
 
 .team__block-in {
-    padding-top: 7.19rem;
-    padding-right: 6rem;
-    padding-bottom: 8, 75rem;
-    padding-left: 6rem;
+    padding: auto;
+    padding-left: -50%;
 
     @include tablets {
         text-align: center;
+    }
+
+    @include phone {
+        padding-top: 5.19rem;
+
     }
 }
 
@@ -44,6 +51,12 @@
     font-weight: 400;
     line-height: 4rem;
     margin: 0 0 3.13rem 0;
+
+    @include phone {
+        font-size: 3.5rem;
+        margin: 0 0 1rem 0;
+
+    }
 }
 
 .team__name {
@@ -67,6 +80,11 @@
     @include tablets {
         margin-bottom: rem(15px);
     }
+
+    @include phone {
+        font-size: 1rem;
+
+    }
 }
 
 .team__list {
@@ -80,6 +98,10 @@
     margin-bottom: 2.12rem;
     display: flex;
     flex-direction: column;
+
+    @include phone {
+        margin-bottom: 1rem;
+    }
 }
 
 .team__member--active {
@@ -158,6 +180,11 @@
     font-weight: 700;
     font-size: .88rem;
     line-height: 1.5rem;
+
+    @include phone {
+        font-size: .78rem;
+
+    }
 }
 
 .team__text>p {
@@ -167,4 +194,9 @@
     font-size: .75rem;
     font-weight: 300;
     line-height: 1.5rem;
+
+    @include phone {
+        font-size: .65rem;
+
+    }
 }
