--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -931,6 +931,15 @@ template {
   height: 100vh; }
 
 .team__block-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: #313436;
   opacity: .95;
   position: absolute;
@@ -938,26 +947,25 @@ template {
   right: 0;
   bottom: 0;
   left: 50%;
-  width: 100%;
+  width: 50%;
   height: 100vh; }
   @media screen and (max-width: 768px) {
     .team__block-right {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
       -webkit-box-pack: center;
       -ms-flex-pack: center;
       justify-content: center;
+      width: 100%;
       left: 0; } }
 
 .team__block-in {
-  padding-top: 7.19rem;
-  padding-right: 6rem;
-  padding-bottom: 8, 75rem;
-  padding-left: 6rem; }
+  padding: auto;
+  padding-left: -50%; }
   @media screen and (max-width: 768px) {
     .team__block-in {
       text-align: center; } }
+  @media screen and (max-width: 480px) {
+    .team__block-in {
+      padding-top: 5.19rem; } }
 
 .team__title {
   color: #f9b43b;
@@ -966,6 +974,10 @@ template {
   font-weight: 400;
   line-height: 4rem;
   margin: 0 0 3.13rem 0; }
+  @media screen and (max-width: 480px) {
+    .team__title {
+      font-size: 3.5rem;
+      margin: 0 0 1rem 0; } }
 
 .team__name {
   display: -webkit-box;
@@ -994,6 +1006,9 @@ template {
   @media screen and (max-width: 768px) {
     .team__name h2 {
       margin-bottom: 0.9375rem; } }
+  @media screen and (max-width: 480px) {
+    .team__name h2 {
+      font-size: 1rem; } }
 
 .team__list {
   display: -webkit-box;
@@ -1017,6 +1032,9 @@ template {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column; }
+  @media screen and (max-width: 480px) {
+    .team__member {
+      margin-bottom: 1rem; } }
 
 .team__member--active .team__triangle {
   border-top-color: #f9b43b;
@@ -1111,6 +1129,9 @@ template {
   font-weight: 700;
   font-size: .88rem;
   line-height: 1.5rem; }
+  @media screen and (max-width: 480px) {
+    .team__text h3 {
+      font-size: .78rem; } }
 
 .team__text > p {
   -webkit-box-flex: 2;
@@ -1121,6 +1142,9 @@ template {
   font-size: .75rem;
   font-weight: 300;
   line-height: 1.5rem; }
+  @media screen and (max-width: 480px) {
+    .team__text > p {
+      font-size: .65rem; } }
 
 .menu {
   display: -webkit-box;
